--- a/amvera.yaml
+++ b/amvera.yaml
@@ -5,5 +5,5 @@ meta:
     version: 3.11
 
 run:
-  command: uvicorn app.main:app --reload --port 8000
+  command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
   containerPort: 8000
